<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c5e1f5"
    tools:context=".Workout"
    >

    <Button
        android:id="@+id/workout_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workout_history"
        android:drawableLeft="@mipmap/ic_history"
        app:layout_constraintBottom_toTopOf="@+id/cycling_workout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/square_button_background"
        />

    <Button
        android:id="@+id/cycling_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_cycling"
        android:drawableLeft="@mipmap/ic_cycle"
        app:layout_constraintBottom_toTopOf="@+id/running_workout"
        app:layout_constraintTop_toBottomOf="@+id/workout_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/square_button_background"
        />

    <Button
        android:id="@+id/running_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_run"
        android:text="@string/start_running"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycling_workout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/square_button_background"
        />

</androidx.constraintlayout.widget.ConstraintLayout>